校验token一致
