# backend/customer/openapi.yaml
@@ -56,6 +56,25 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /customer/logout:
+        get:
+            tags:
+                - Customer
+            description: 退出
+            operationId: Customer_Logout
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/LogoutResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
         GetVerifyCodeResp:
@@ -105,6 +124,13 @@ components:
                     type: integer
                     description: token life time (second)
                     format: int32
+        LogoutResp:
+            type: object
+            properties:
+                code:
+                    type: string
+                message:
+                    type: string
         Status:
             type: object
             properties:
